Fixed Template Layout Bug

--- a/MB.Presentation/wwwroot/css/main.css
+++ b/MB.Presentation/wwwroot/css/main.css
@@ -3225,7 +3225,6 @@ body.search-is-visible {
  * ------------------------------------------------------------------- */
 .comments-wrap {
   padding: 6.4rem 0 0 0;
-  background-color: #ffffff;
 }
 
 .comments-wrap h3 {
